// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ProgressBarContinuous Progress Bar 1`] = `
<div>
  <div>
    <div>
      <div />
      <div
        data-testid="component-wrapper"
      >
        <div>
          <div
            class="ProgressBar__ProgressContainer-sc-17cia4c-0 bEZvUJ Spaceweb__Space-sc-1abqisc-0 jdBcNe"
            height="4px"
          >
            <div
              class="ProgressBar__StyledProgressBar-sc-17cia4c-1 jSMGKv"
              height="4px"
              width="10"
            />
          </div>
          <br />
          <br />
          <button
            class="Buttonweb__StyledButton-sc-18xf15a-0 kRiGXp Spaceweb__Space-sc-1abqisc-0 dBqoYd Sizeweb__Size-sc-1e5yf1-0 jdvRfl Flexweb__Flex-sc-1yhcoea-0 biKCWz"
            data-testid="ds-button"
            type="button"
          >
            <div
              class="Textweb__Text-sc-1qrdpx3-0 gdNKCE"
              color="light.900"
              data-testid="ds-text"
            >
              Increase By 5
            </div>
          </button>
          <br />
          <br />
          <button
            class="Buttonweb__StyledButton-sc-18xf15a-0 kRiGXp Spaceweb__Space-sc-1abqisc-0 dBqoYd Sizeweb__Size-sc-1e5yf1-0 jdvRfl Flexweb__Flex-sc-1yhcoea-0 biKCWz"
            data-testid="ds-button"
            type="button"
          >
            <div
              class="Textweb__Text-sc-1qrdpx3-0 gdNKCE"
              color="light.900"
              data-testid="ds-text"
            >
              Increase By 10
            </div>
          </button>
        </div>
        <div
          data-testid="layerTestId"
          id="layerHost"
        />
      </div>
    </div>
  </div>
  <div
    data-testid="layerTestId"
    id="layerHost"
  />
</div>
`;

exports[`Storyshots ProgressBarContinuous Progress Bar Continuous With Controls 1`] = `
<div>
  <div>
    <div>
      <div />
      <div
        data-testid="component-wrapper"
      >
        <div>
          <div
            class="ProgressBar__ProgressContainer-sc-17cia4c-0 bEZvUJ Spaceweb__Space-sc-1abqisc-0 jdBcNe"
            height="4px"
          >
            <div
              class="ProgressBar__StyledProgressBar-sc-17cia4c-1 ibrFvV"
              height="4px"
              width="70"
            />
          </div>
        </div>
        <div
          data-testid="layerTestId"
          id="layerHost"
        />
      </div>
    </div>
  </div>
  <div
    data-testid="layerTestId"
    id="layerHost"
  />
</div>
`;
